<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hackathon</string>
    <string name="action_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_events">My Events</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_create">Create Event</string>
    <string name="menu_share">Share</string>
    <string name="menu_edit">Edit</string>
    <string name="RSVP_status">RSVP</string>
    <string name="name_text">Name</string>
    <string name="description_text">description</string>
    <string name="table_row_skills_offer">Skills Offered</string>
    <string name="table_row_skills_learn">Skills to Learn</string>
    <string name="button_edit">Edit</string>
    <string name="button_update">Update</string>
    <string name="button_description">Description</string>
    <string name="alert_test">This is a test description! Blah blah blah blah blhah blah blah</string>
    <string name="description_dialog_title">Description</string>
    <string name="dialog_ok">OK</string>
    <string name="button_add">Add</string>

</resources>